--- a/src/routes/task-routes/tasks.css
+++ b/src/routes/task-routes/tasks.css
@@ -1,4 +1,31 @@
-.new-task-btn {
+.project-tasks {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem 1.5rem;
+}
+
+.task-card {
+  border: 1px solid #fff;
+  border-radius: 10px;
+  width: 350px;
+  height: fit-content;
+  padding: 0.5rem 1rem;
+}
+
+.task-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+form:has(.new-task-btn) {
+  margin-bottom: 1rem;
+}
+
+.new-task-btn,
+.edit-task-btn,
+.delete-task-btn,
+.new-todo-btn {
   outline: none;
   border: 0;
   border-radius: 50%;
@@ -6,18 +33,34 @@
   background-color: transparent;
 }
 
-.new-task {
+.new-task,
+.edit-task {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: #0005;
+  background-color: transparent;
   display: grid;
   place-items: center;
+  animation-name: load-bg;
+  animation-duration: 200ms;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
 }
 
-.new-task > form {
+@keyframes load-bg {
+  0% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: #0005;
+  }
+}
+
+.new-task > form,
+.edit-task > form {
   background-color: #fff;
   width: 325px;
   padding: 1em 0.75em;
@@ -25,6 +68,7 @@
   display: flex;
   flex-direction: column;
   font-size: 18px;
+  color: #000;
   font-weight: 600;
   gap: 0.5rem;
 }
@@ -32,4 +76,20 @@
 .new-task input {
   font-size: 20px;
   border: 1px solid #000;
+}
+
+.edit-task > form {
+  width: 500px;
+}
+
+.todos {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+}
+
+.todos > li {
+  border: 1px solid black;
 }
