--- a/client/src/routes/root.css
+++ b/client/src/routes/root.css
@@ -41,6 +41,10 @@
   justify-content: space-between;
 }
 
+.nav-title > h2 {
+  font-size: larger;
+}
+
 .nav-bar > form {
   height: 100%;
   display: flex;
