--- a/client/src/routes/user-routes/login.css
+++ b/client/src/routes/user-routes/login.css
@@ -15,3 +15,10 @@
 .btn-link {
   padding-top: 0;
 }
+
+.logout {
+  background-color: #fff3;
+  padding: 2em;
+  border-radius: 10px;
+  color: #fff;
+}
