update: bug fixes + projects migrated from localforage -> sessionStorage

--- a/client/src/routes/app-notifications/notification.css
+++ b/client/src/routes/app-notifications/notification.css
@@ -1,5 +1,5 @@
 .notification-container {
-  position: absolute;
+  position: fixed;
   top: calc(100% - 5rem);
   z-index: 300;
   border: 1px solid white;
