--- a/client/src/routes/user-routes/login.css
+++ b/client/src/routes/user-routes/login.css
@@ -3,6 +3,14 @@
   height: 100vh;
   display: grid;
   place-items: center;
+  position: relative;
+}
+
+.login-form-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.5em 0.75em;
 }
 
 .login-form-container form {
