--- a/client/src/routes/root.css
+++ b/client/src/routes/root.css
@@ -7,6 +7,14 @@
   position: relative;
 }
 
+.toggle-sidebar {
+  position: absolute;
+  top: 0;
+  left: 0.4em;
+  z-index: 200;
+  width: inherit;
+}
+
 .root-div > header {
   display: flex;
   flex-direction: column;
@@ -16,6 +24,15 @@
   background-color: #080400;
   width: max(20%, 120px);
   position: relative;
+}
+
+@media (max-width: 500px) {
+  .root-div > header {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+  }
 }
 
 .root-div h1 {
@@ -191,14 +208,17 @@
   align-items: center;
 }
 
-.new-project {
+.new-project,
+.edit-project {
   display: flex;
   flex-direction: column;
+  width: min(100%, fit-content);
   gap: 1rem;
+  padding: 0.25em 0.5em;
 }
 
 .np-name {
-  font-size: 30px;
+  font-size: 1.8em;
   outline: none;
   border: 0;
   border-radius: 10px;
@@ -208,12 +228,13 @@
 }
 
 .np-desc {
-  width: 400px;
+  width: min(400px, 100%);
   max-height: 200px;
   resize: none;
 }
 
-.new-project > button {
+.new-project > button,
+.edit-project > button {
   padding: 0.25rem 0.5rem;
 }
 
