--- a/client/src/routes/app-notifications/notification.css
+++ b/client/src/routes/app-notifications/notification.css
@@ -4,12 +4,24 @@
   z-index: 300;
   border: 1px solid white;
   border-radius: 10px 0 0 10px;
+  padding: 0.25em 0.5em;
   height: fit-content;
-  width: 250px;
+  width: 200px;
   display: flex;
   flex-direction: column;
-  justify-content: safe;
+  justify-content: center;
   align-items: flex-start;
+  background-color: #080400aa;
+}
+
+.notification-container p {
+  margin: 0;
+  padding: 0;
+}
+
+.notification-container form {
+  width: fit-content;
+  height: fit-content;
 }
 
 .notification-container button {
