--- a/client/src/routes/root.css
+++ b/client/src/routes/root.css
@@ -162,7 +162,7 @@
   align-items: flex-end;
   gap: 0.25em;
   position: relative;
-  bottom: 2%;
+  bottom: 0;
   width: 100%;
   height: fit-content;
 }
@@ -189,6 +189,12 @@
   }
 }
 
+@media (max-width: 600px) {
+  .user-actions {
+    bottom: 8%;
+  }
+}
+
 .root-div > main {
   width: 100%;
   height: 100%;
@@ -208,7 +214,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: flex-end;
+  text-align: right;
 }
 
 .new-project,
