--- a/src/routes/root.css
+++ b/src/routes/root.css
@@ -22,7 +22,7 @@
   align-items: flex-start;
   padding: 0.75em 0.5em 0;
   background-color: #080400;
-  width: max(20%, 200px);
+  width: max(25%, 200px);
   height: 100%;
   position: relative;
 }
@@ -47,6 +47,7 @@
 
 .nav-bar {
   width: 100%;
+  height: 80%;
   overflow: hidden;
   position: relative;
   display: flow-root;
@@ -85,6 +86,11 @@
 
 .new-todo-btn {
   width: 24px;
+}
+
+.search-project {
+  font-size: 14px;
+  margin-bottom: 5px;
 }
 
 .nav-bar > ul {
