--- a/src/routes/root.css
+++ b/src/routes/root.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: center;
   padding: 0.75em 0.5em 0;
   background-color: #080400;
   width: max(20%, 200px);
@@ -215,6 +215,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
+  gap: 0.25em;
   text-align: right;
 }
 
