--- a/src/routes/task-routes/tasks.css
+++ b/src/routes/task-routes/tasks.css
@@ -1,8 +1,8 @@
 .project-tasks {
   max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(305px, 1fr));
-  gap: 1em 0.25em;
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+  gap: 1em 0.1em;
 }
 
 @media (max-width: 800px) {
@@ -21,7 +21,7 @@
 .task-card {
   border: 1px solid #fff;
   border-radius: 10px;
-  width: 300px;
+  width: 270px;
   height: fit-content;
   padding: 0.5rem 1rem;
   background-color: #b6b6b61a;
@@ -67,6 +67,11 @@ form:has(.new-task-btn) {
   display: grid;
   place-items: center;
   transition: scale 100ms;
+}
+
+.input-group-btn:has(.new-todo-btn) {
+  border: 1px solid #0007;
+  border-radius: 5px;
 }
 
 .mark-todo-done-btn {
@@ -129,23 +134,23 @@ form:has(.new-task-btn) {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  font-size: 18px;
+  font-size: 15px;
   color: #000;
   font-weight: 600;
   gap: 0.5rem;
 }
 
 .new-task input {
-  font-size: 20px;
+  font-size: 15px;
   border: 1px solid #000;
 }
 
 .edit-task > form {
-  width: min(500px, 100%);
+  width: min(425px, 100%);
 }
 
 .invalid-date {
-  font-size: 15px;
+  font-size: 12px;
   color: red;
 }
 
