--- a/src/routes/app-notifications/notification.css
+++ b/src/routes/app-notifications/notification.css
@@ -1,6 +1,7 @@
 .notification-container {
   position: fixed;
   top: 90%;
+  right: 0;
   z-index: 300;
   border: 1px solid white;
   border-radius: 10px 0 0 10px;
