--- a/src/routes/root.css
+++ b/src/routes/root.css
@@ -319,9 +319,7 @@
   gap: 0.5rem;
 }
 
-.project-delete,
-.project-edit,
-.set-fav-btn {
+.action-button {
   width: 25px;
 }
 
@@ -330,9 +328,7 @@
   background-color: transparent;
 }
 
-.project-delete,
-.project-edit,
-.set-fav-btn {
+.action-button {
   background-color: transparent;
   border-radius: 50%;
   border: 0;
@@ -345,15 +341,11 @@
   transition: scale 250ms;
 }
 
-.project-delete:hover,
-.project-edit:hover,
-.set-fav-btn:hover {
+.action-button:hover {
   scale: 1.25;
 }
 
-.set-fav-btn:active,
-.project-delete:active,
-.project-edit:active {
+.action-button:active {
   scale: 0.9;
 }
 
