--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,7 @@
   font-size: 15px;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
