--- a/src/routes/task-routes/tasks.css
+++ b/src/routes/task-routes/tasks.css
@@ -1,13 +1,19 @@
 .project-tasks {
   max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
-  gap: 1em 0.1em;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(275px, 280px)
+  );
+  gap: 1em 0.5em;
 }
 
 @media (max-width: 800px) {
   .project-tasks {
-    grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(255px, 1fr)
+    );
   }
 }
 
@@ -23,6 +29,7 @@
   border-radius: 10px;
   width: 270px;
   height: fit-content;
+  overflow: hidden;
   padding: 0.5rem 1rem;
   background-color: #b6b6b61a;
   transition: box-shadow 350ms;
@@ -171,4 +178,17 @@ form:has(.new-task-btn) {
 
 form:has(.mark-todo-done-btn) {
   padding: 0.1em;
+}
+
+.closing {
+  position: relative;
+}
+
+.closing::after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff9;
 }
