--- a/src/main.css
+++ b/src/main.css
@@ -24,10 +24,13 @@ body {
   color: #fcfcfc;
 }
 
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: inherit;
 }
 
 * > img {
