--- a/src/pages/User/login.css
+++ b/src/pages/User/login.css
@@ -4,7 +4,7 @@
   display: grid;
   place-items: center;
   position: relative;
-  background-image: url(../../assets/simple-bg.svg);
+  background-image: url(../../assets/images/simple-bg.svg);
 }
 
 .login-form-back {
