--- a/src/assets/styles/root.css
+++ b/src/assets/styles/root.css
@@ -7,11 +7,16 @@
   position: relative;
 }
 
-.toggle-sidebar {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 1rem;
+.open-sidebar {
+  position: fixed;
+  top: 0.1rem;
+  left: 0.2rem;
+}
+
+@media (min-width: 500px) {
+  .open-sidebar {
+    display: none;
+  }
 }
 
 .root-div > header {
@@ -24,6 +29,13 @@
   width: max(15%, 200px);
   height: 99%;
   position: relative;
+}
+
+.toggle-sidebar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
 }
 
 @media (max-width: 500px) {
