--- a/src/assets/styles/root.css
+++ b/src/assets/styles/root.css
@@ -156,14 +156,14 @@
   border-bottom: 1px solid #fff;
 }
 
-ul.nav-bar-list::-webkit-scrollbar {
+.nav-bar ul::-webkit-scrollbar {
   width: 1px;
 }
-ul.nav-bar-list::-webkit-scrollbar-track {
+.nav-bar ul::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-ul.nav-bar-list::-webkit-scrollbar-thumb {
+.nav-bar ul::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 0.5px solid slategrey;
 }
