--- a/src/assets/styles/root.css
+++ b/src/assets/styles/root.css
@@ -42,7 +42,7 @@
   .root-div > header {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 100;
   }
 }
