--- a/src/assets/styles/tasks.css
+++ b/src/assets/styles/tasks.css
@@ -1,19 +1,13 @@
 .project-tasks {
   max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(275px, 280px)
-  );
+  grid-template-columns: repeat(auto-fit, minmax(275px, 280px));
   gap: 1em 0.5em;
 }
 
 @media (max-width: 800px) {
   .project-tasks {
-    grid-template-columns: repeat(
-      auto-fit,
-      minmax(255px, 1fr)
-    );
+    grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
   }
 }
 
