--- a/src/assets/styles/tasks.css
+++ b/src/assets/styles/tasks.css
@@ -170,10 +170,6 @@ form:has(.new-task-btn) {
   align-items: center;
 }
 
-form:has(.mark-todo-done-btn) {
-  padding: 0.1em;
-}
-
 .closing {
   position: relative;
 }
@@ -185,4 +181,8 @@ form:has(.mark-todo-done-btn) {
   width: 100%;
   height: 100%;
   background-color: #fff9;
+}
+
+button.todo-icon {
+  width: 18px;
 }
