--- a/client/src/assets/styles/tasks.css
+++ b/client/src/assets/styles/tasks.css
@@ -20,7 +20,7 @@
 
 .task-card {
   border: 1px solid #fff;
-  border-radius: 10px;
+  /* border-radius: 5px; */
   width: 270px;
   height: fit-content;
   overflow: hidden;
@@ -114,7 +114,7 @@ form:has(.new-task-btn) {
   background-color: #444444ec;
   width: min(325px, 100%);
   padding: 1em 0.75em;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   display: flex;
   flex-direction: column;
   font-size: 15px;
