--- a/client/src/assets/styles/root.css
+++ b/client/src/assets/styles/root.css
@@ -13,7 +13,8 @@
   left: 0.2rem;
 }
 
-@media (min-width: 500px) {
+/* 501 so it shows at 500 */
+@media (min-width: 501px) {
   .open-sidebar {
     display: none;
   }
@@ -31,7 +32,7 @@
   height: 100vh;
   overflow: hidden;
   position: relative;
-  transition: width 200ms;
+  transition: width 50ms;
 }
 
 @media (max-width: 500px) {
